--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,7 @@
 }
 
 .Map{
-    background-image: url(/assets/Map.jpg);
+    background-image: url(/dist/REST-Countries/assets/Map.jpg);
 }
 
 .back{
