--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid heading Map">
-    <h1>Know Your W<img class="globe" src="./dist/REST-Countries/assets/globe.png">RLD</h1>
+    <h1>Know Your W<img class="globe" src="./assets/globe.png">RLD</h1>
     <br>
 </div>
 
