--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,7 @@
 }
 
 .Map{
-    background-image: url("/assets/Map.JPG");
+    background-image: url(https://i.pinimg.com/originals/9d/eb/08/9deb08cbac490f5fa43032499f61c581.jpg);
 }
 
 .back{
