--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,7 +7,7 @@
 }
 
 .world{
-    background-image: url(/assets/world.webp);
+    background-image: url(https://wallpaper.dog/large/20470968.jpg);
 }
 
 .regionCard{
