--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,7 +7,7 @@
 }
 
 .world{
-    background-image: url(https://wallpaper.dog/large/20470968.jpg);
+    background-image: url(https://Subhashsk.github.io/Countries-Around-Globe/assets/world.webp);
 }
 
 .regionCard{
